<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
            android:background="@color/grey"
              android:orientation="horizontal">

   <RadioButton
           android:id="@+id/time"
           android:drawableLeft="@drawable/radio_price"
           style="@style/nav"
           android:text="@string/time"
           />
    <RadioButton
            android:drawableLeft="@drawable/radio_price"
            style="@style/nav"
            android:text="@string/price"
            />
    <RadioButton
            android:drawableLeft="@drawable/radio_select"
            android:text="@string/select"
            style="@style/nav"
           />


</RadioGroup>
