<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_bar">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp">
        <LinearLayout
            android:id="@+id/id_tab_bottom_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:clickable="true"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/btn_tab_bottom_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:background="@color/home_bottom_bar"
                android:adjustViewBounds="true"
                android:src="@drawable/home_pressed"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/index" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/id_tab_bottom_flight_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:clickable="true"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/btn_tab_bottom_flight_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:background="@color/home_bottom_bar"
                android:adjustViewBounds="true"
                android:src="@drawable/flight_order"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/flight_order" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/id_tab_bottom_order_manage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:clickable="true"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/btn_tab_bottom_order_manage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:background="@color/home_bottom_bar"
                android:adjustViewBounds="true"
                android:src="@drawable/order_manage"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="订单管理" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/id_tab_bottom_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:clickable="true"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/btn_tab_bottom_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:background="@color/home_bottom_bar"
                android:adjustViewBounds="true"
                android:src="@drawable/message"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/message" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/id_tab_bottom_personal_center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:clickable="true"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/btn_tab_bottom_personal_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:background="@color/home_bottom_bar"
                android:adjustViewBounds="true"
                android:src="@drawable/personal_center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/personal_center" />
        </LinearLayout>


</LinearLayout>
</RelativeLayout>