<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:background="@color/grey"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
            android:id="@+id/buttom_layout"
            android:layout_alignParentBottom="true"
            android:background="@color/orange"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:id="@+id/person_icon"
                android:layout_centerVertical="true"
                android:src="@drawable/order_manage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/count"
                android:layout_toRightOf="@id/person_icon"
                android:text="X3"
                android:textSize="@dimen/format_time_size"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/all_price_tv"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/count"
                android:text="总金额:"
                android:textSize="@dimen/format_time_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/all_price_tv_count"
                android:textSize="@dimen/format_time_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </RelativeLayout>

    <RelativeLayout
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_above="@id/buttom_layout"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:background="@color/grey"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/top_layout">

            <TextView
                    android:layout_marginTop="10dp"
                    android:text="上海-北京"
                    android:textSize="@dimen/format_time_size"
                    android:textColor="@color/red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blue"
                        android:drawableLeft="@drawable/clock"
                        android:drawablePadding="5dp"
                        android:text="05-24 星期四"/>
            </LinearLayout>
            <RelativeLayout
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/start_place"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/format_time_size"
                        android:layout_centerVertical="true"
                        android:text="出发地"/>
                <ImageView
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/plane_to"/>
                <TextView
                        android:id="@+id/end_place"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/format_time_size"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="目的地"/>
            </RelativeLayout>
            <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/start_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/format_time_size"
                        android:layout_centerVertical="true"
                        android:text="出发事件"/>
                <TextView
                        android:id="@+id/end_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textSize="@dimen/format_time_size"
                        android:layout_centerVertical="true"
                        android:text="到达时间"/>
            </RelativeLayout>
            <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/format_time_size"
                        android:layout_centerVertical="true"
                        android:text="东方航空"/>
                <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textSize="@dimen/format_time_size"
                        android:layout_centerVertical="true"
                        android:text="税费:230"/>
            </RelativeLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/orange"
                    android:padding="10dp"
                    android:orientation="vertical">
                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:id="@+id/ticket_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="经济舱"
                            />
                    <TextView
                            android:id="@+id/price1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/red"
                            android:layout_alignParentRight="true"
                            android:textSize="@dimen/format_time_size"
                            android:text="￥888"
                            />
                </RelativeLayout>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="单张结算价=888+222=1110"/>
                <Button
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:text="@string/rule"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_bj"/>
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
                android:id="@+id/center_layout"
                android:layout_below="@id/top_layout"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/traveller_info"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <Button
                    android:text="@string/my_traveller"
                    android:layout_width="wrap_content"
                    android:padding="10dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/button_bg_white"
                    android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
                android:id="@+id/bottom_layout"
                android:layout_below="@id/center_layout"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                android:background="@drawable/button_bg_white"
                android:layout_height="wrap_content">
            <ImageView
                    android:id="@+id/add_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/add"/>
            <TextView
                    android:id="@+id/add_traveller"
                    android:text="@string/add_new_traveller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/add_image"/>
            <ImageView
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/mail_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </RelativeLayout>
        <ListView
                android:layout_below="@id/bottom_layout"
                android:id="@+id/traveller_info_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ></ListView>
    </RelativeLayout>

</RelativeLayout>
